--- a/index.html
+++ b/index.html
@@ -6,9 +6,26 @@
 
   <title>Nick Noble at Work&amp;Co?</title>
 
-  <link type="text/plain" rel="author" href="/humans.txt" />
+  <link type="text/plain" rel="author" href="humans.txt" />
+  <link type="text/css" rel="stylesheet" href="styles.css" />
 </head>
 <body>
+
+  <header id="swapper">
+    
+    <section>
+      <div class="clip">
+        <h1>Nick Noble Works</h1>
+      </div>
+    </section>
+    
+    <section>
+      <div class="clip">
+        <h1>Nick Noble at Work&amp;Co?</h1>
+      </div>
+    </section>
+
+  </header>
 
   <h1>Hello world!</h1>
   
