make header copy more clever

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     
     <section>
       <div class="clip">
-        <h1>Nick Noble Works</h1>
+        <h1>Nick Noble Works.</h1>
       </div>
     </section>
     
     <section>
       <div class="clip">
-        <h1>Nick Noble at Work&amp;Co?</h1>
+        <h1>Nick Noble Works... at Work&amp;Co?</h1>
       </div>
     </section>
 
