add color utility, use a class for swapper component

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 </head>
 <body>
 
-  <header id="swapper">
+  <header class="swapper">
     
-    <section>
+    <section class="b-black c-white">
       <div class="clip">
         <h1>Nick Noble Works.</h1>
       </div>
     </section>
     
-    <section>
+    <section class="c-highlight">
       <div class="clip">
         <h1>Nick Noble Works... at Work&amp;Co?</h1>
       </div>
