--- a/index.html
+++ b/index.html
@@ -1,4 +1,51 @@
-<!DOCTYPE html>
+<!doctype html>
+
+<!-- ===============================================================================
+====================================================================================
+===                                                                              ===
+===                                                                              ===
+===                                                                              ===
+===   888b    888 888  .d8888b.  888    d8P                                      ===
+===   8888b   888 888 d88P  Y88b 888   d8P                                       ===
+===   888Y8b  888 888 888    888 888  d8P                                        ===
+===   888 Y8b 888 888 888        888d88K                                         ===
+===   888  Y88888 888 888    888 888  Y88b                                       ===
+===   888   Y8888 888 Y88b  d88P 888   Y88b                                      ===
+===   888    Y888 888  "Y8888P"  888    Y88b                                     ===
+===                                                                              ===
+===   888b    888  .d88888b.  88888888b.  888       888888888      888           ===
+===   8888b   888 d88P" "Y88b 888   Y88b  888       888            888           ===
+===   888Y8b  888 888     888 888  .d88P  888       888......   888888888        ===
+===   888 Y8b 888 888     888 88888888P"  888       888888888   888888888        ===
+===   888  Y88888 888     888 888  "88K.  888       888            888           ===
+===   888   Y8888 Y88b. .d88P 888   ,Y8b  888...... 888......      888           ===
+===   888    Y888  "Y88888P"  888888888P  888888888 888888888                    ===
+===                                                                              ===
+===                                                                              ===
+===                                                                              ===
+===   888       888  .d88888b.  8888888b.  888    d8P                            ===
+===   888   o   888 d88P" "Y88b 888   Y88b 888   d8P                             ===
+===   888  d8b  888 888     888 888    888 888  d8P                              ===
+===   888 d888b 888 888     888 888   d88P 888d88K                               ===
+===   88888P Y88888 888     888 888 T88b   888  Y88b                             ===
+===   8888P   Y8888 Y88b. .d88P 888  T88b  888   Y88b                            ===
+===   888P     Y888  "Y88888P"  888   T88b 888    Y88b                           ===
+===                                                                              ===
+===    .d8888b.      .d8888b.   .d88888b.                                        ===
+===   d88P  "88b    d88P  Y88b d88P" "Y88b                                       ===
+===   Y88b. d88P    888    888 888     888                                       ===
+===    "Y8888P"     888        888     888                                       ===
+===   .d88P88K.d88P 888        888     888                                       ===
+===   888"  Y888P"  888    888 888     888                                       ===
+===   Y88b .d8888b  Y88b  d88P Y88b. .d88P                                       ===
+===    "Y8888P" Y88b "Y8888P"   "Y88888P"                                        ===
+===                                                                              ===
+===                                                                              ===
+===   Hire me. frontdesk@nicknoble.works                                         ===
+===                                                                              ===
+===                                                                              ===
+====================================================================================
+================================================================================ -->
 <html lang="en">
 <head>
   <meta charset="UTF-8">
