add base structure

--- a/index.html
+++ b/index.html
@@ -74,9 +74,40 @@
 
   </header>
 
-  <h1>Hello world!</h1>
-  
+  <main>
+    
+    <header id="site-header">
+      <div id="logo">
+        <span>Nick<br>Noble</span>
+        <span>@ Work<br>&amp;Co</span>
+      </div>
+    </header>
+    
+    <!-- 01 Intro -->
+    <section id="intro"></section>
 
+    <!-- 02 Expertise -->
+    <section class="b-highlight c-white" id="expertise"></section>
+
+    <!-- 03 Clients -->
+    <section id="clients"></section>
+
+    <!-- 04 Cases -->
+    <section class="b-gray" id="cases"></section>
+
+    <!-- 05 Candidate -->
+    <section id="candidate"></section>
+
+    <!-- 06 Facts -->
+    <section class="b-highlight" id="facts"></section>
+
+    <!-- 07 Contact -->
+    <section class="b-black c-white" id="contact"></section>
+
+    <!-- 08 Conclusion -->
+    <footer id="site-footer"></footer>
+  </main>
+  
   <script type="text/javascript">
     // Other than that, there's really no other JS needed...
     // Except, maybe....
