make scaled frames work

--- a/index.html
+++ b/index.html
@@ -149,6 +149,20 @@
         <h4><span class="number c-black">04</span> Cases</h4>
       </header>
 
+      <div class="zigzag">
+        
+        <figure>
+          <div class="scale-frame">
+            <iframe src="https://nicknoble.works/museum/lanyap"></iframe>
+          </div>
+          <figcaption>
+            <h2>This is a title</h2>
+            <p>This is a description</p>
+          </figcaption>
+        </figure>
+
+      </div>
+
     </section>
 
     <!-- 04 Candidate -->
