save stuff for apple appt

--- a/index.html
+++ b/index.html
@@ -149,11 +149,38 @@
         <h4><span class="number c-black">04</span> Cases</h4>
       </header>
 
+      <div class="text">
+        <h1>Case studies</h1>
+        <h3>These are a few projects I'm proud of, for one reason or another. Unfortunately in some cases I'm bound by NDA, so I can only divulge approximate numbers.</h3>
+      </div>
+
+      <h4>Cases</h4>
+
       <div class="zigzag">
         
-        <figure>
+        <figure class="zz-item">
           <div class="scale-frame">
-            <iframe src="https://nicknoble.works/museum/lanyap"></iframe>
+            <iframe src="//nicknoble.works/museum/lanyap"></iframe>
+          </div>
+          <figcaption>
+            <h2>This is a title</h2>
+            <p>This is a description</p>
+          </figcaption>
+        </figure>
+
+        <figure class="zz-item">
+          <div class="scale-frame">
+            <iframe src="//nicknoble.works/museum/graham-allen"></iframe>
+          </div>
+          <figcaption>
+            <h2>This is a title</h2>
+            <p>This is a description</p>
+          </figcaption>
+        </figure>
+
+        <figure class="zz-item">
+          <div class="scale-frame">
+            <iframe src="//lnky.io"></iframe>
           </div>
           <figcaption>
             <h2>This is a title</h2>
