remove scale-frame :(

--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
 
       <div class="zigzag">
         
-        <figure class="zz-item scale-frame">
-          <iframe src="//nicknoble.works/museum/lanyap" frameborder="0"></iframe>
+        <figure class="zz-item">
+          <img src="https://www.fillmurray.com/1600/900" alt="">
           <figcaption>
             <h2>This is a title</h2>
             <p>This is a description</p>
