add divider hairline

--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
 
   <header class="swapper">
     
-    <section class="section b-black c-white">
+    <section class="b-black c-white">
       <div class="clip">
         <h1>Nick Noble Works.</h1>
       </div>
     </section>
     
-    <section class="section b-white c-highlight">
+    <section class="b-white c-highlight">
       <div class="clip">
         <h1>Nick Noble Works... at Work&amp;Co?</h1>
       </div>
