style clients section

--- a/index.html
+++ b/index.html
@@ -140,6 +140,86 @@
       <h1>Public engagements</h1>
       <h3>Wherever I can, I solve for the disease—not the symptoms.</h3>
 
+      <ul class="client-grid">
+        <li class="client">
+          <h3>HBO</h3>
+          <p>I've worked on at least four different primetime television series for them throughout the past decade, do graphic design and on-screen interactive. I'm also the unofficial typography consultant for growing percentage of their executives.</p>
+        </li>
+
+        <li class="client">
+          <h3>Dinner Lab</h3>
+          <p>I was their first technical hire outside of the original partners. I built out a custom design system for their client facing interface and marketing pages. While the company no longer exists, in its heyday it was active in over 30 cities across the country.</p>
+        </li>
+
+        <li class="client">
+          <h3>nclud</h3>
+          <p>As a Front End Developer, I worked on projects for Tesla Motors, George Washington University, Wingate Hughes Architecture, and General Assembly, among many others. Collaborating with some amazing peers, I was also the catalyst behind their latest rebrand.</p>
+        </li>
+
+        <li class="client">
+          <h3>Agora</h3>
+          <p>I was hired as a front end developer for their largest property, Stansberry &amp; Associates. I refactored a legacy (read: horrifying) codebase and built two new design systems, but my crowning achievement was a small improvement to an onboarding form that resulted in an additional ~$200,000 in revenue, practically overnight.</p>
+        </li>
+
+        <li class="client">
+          <h3>Schindler Group</h3>
+          <p>I designed an updated version of their interactive elevator cab designer. Although their were heavy constraints and requirements, I was able to create something that got the job done gracefully. I have a deep appreciation for "boring" design, and this was a great opportunity to do precisely that.</p>
+        </li>
+
+        <li class="client">
+          <h3>TBD</h3>
+          <p>Someone else?</p>
+        </li>
+      </ul>
+
+      <h4>Everyone I've ever worked with</h4>
+      <ul class="client-list">
+        <li class="client">1912 Center</li>
+        <li class="client">Agora, Inc</li>
+        <li class="client">Backroom</li>
+        <li class="client">Blown Deadline (David Simon)</li>
+        <li class="client">Bombay Sapphire</li>
+        <li class="client">The Buller Group</li>
+        <li class="client">Cathedral Creative Studios</li>
+        <li class="client">CBS</li>
+        <li class="client">Christina Tonkin Interior Design</li>
+        <li class="client">Dallas Theological Seminary</li>
+        <li class="client">Dat Dog</li>
+        <li class="client">Dinner Lab</li>
+        <li class="client">DJ-Sun</li>
+        <li class="client">DJ CoolHand</li>
+        <li class="client">fedscoop</li>
+        <li class="client">FOX FX</li>
+        <li class="client">FOX Searchlight</li>
+        <li class="client">Friendship, LLC</li>
+        <li class="client">GNO Sports Foundation</li>
+        <li class="client">George Washington University</li>
+        <li class="client">HacksmithLabs</li>
+        <li class="client">HBO</li>
+        <li class="client">IMRE</li>
+        <li class="client">Interfolio</li>
+        <li class="client">Ionic Security</li>
+        <li class="client">Lanyap Creative</li>
+        <li class="client">Marquee</li>
+        <li class="client">nclud</li>
+        <li class="client">Netflix</li>
+        <li class="client">NOLATech Week</li>
+        <li class="client">The Ogden Museum of Southern Art</li>
+        <li class="client">Paramount Pictures</li>
+        <li class="client">PDK International</li>
+        <li class="client">PowerBar</li>
+        <li class="client">Radiate Records</li>
+        <li class="client">RapJab</li>
+        <li class="client">STIHL</li>
+        <li class="client">Schindler Group</li>
+        <li class="client">Small Batch MGMT</li>
+        <li class="client">Startup Weekend</li>
+        <li class="client">Symantec</li>
+        <li class="client">Symbacort</li>
+        <li class="client">Tesla Motors</li>
+        <li class="client">Wingate Hughes</li>
+        <li class="client">YouthINC</li>
+      </ul>
     </section>
 
     <!-- 03 Cases -->
