add myself as a client

--- a/index.html
+++ b/index.html
@@ -138,12 +138,12 @@
       </header>
 
       <h1>Public engagements</h1>
-      <h3>Wherever I can, I solve for the disease—not the symptoms.</h3>
+      <h3>The rules have been simple: show up every day, always improve the client's condition, and be ruthlessly honest with everyone.</h3>
 
       <ul class="client-grid">
         <li class="client">
           <h3>HBO</h3>
-          <p>I've worked on at least four different primetime television series for them throughout the past decade, do graphic design and on-screen interactive. I'm also the unofficial typography consultant for growing percentage of their executives.</p>
+          <p>I've worked on at least four different primetime television series for them throughout the past decade, doing graphic design and on-screen interactive. I'm also the unofficial typography consultant for growing percentage of their executives.</p>
         </li>
 
         <li class="client">
@@ -163,12 +163,12 @@
 
         <li class="client">
           <h3>Schindler Group</h3>
-          <p>I designed an updated version of their interactive elevator cab designer. Although their were heavy constraints and requirements, I was able to create something that got the job done gracefully. I have a deep appreciation for "boring" design, and this was a great opportunity to do precisely that.</p>
+          <p>I designed an updated version of their interactive elevator cab designer. Although there were heavy constraints and requirements, I was able to create something that got the job done gracefully. I have a deep appreciation for "boring" functional design, and this was a great opportunity to do precisely that.</p>
         </li>
 
         <li class="client">
-          <h3>TBD</h3>
-          <p>Someone else?</p>
+          <h3>Nick Noble Works</h3>
+          <p>I know it's weird to put myself down as a client, but I'm very proud of the fact that I've built a sustainable and successful freelance practice. Since I'm applying for a job I think this is great artifact to look at: not only do I know how to do the work, but I have first hand understanding of the underlying business problems and constraints that come into play.</p>
         </li>
       </ul>
 
@@ -203,6 +203,7 @@
         <li class="client">Marquee</li>
         <li class="client">nclud</li>
         <li class="client">Netflix</li>
+        <li class="client">New Orleans Fashion Week</li>
         <li class="client">NOLATech Week</li>
         <li class="client">The Ogden Museum of Southern Art</li>
         <li class="client">Paramount Pictures</li>
