--- a/index.html
+++ b/index.html
@@ -161,86 +161,86 @@
       <h1>Public engagements</h1>
       <h3>The rules have been simple: show up every day, always improve the client's condition, and be ruthlessly honest with everyone.</h3>
 
-      <ul class="client-grid">
-        <li class="client">
+      <ul class="grid-list">
+        <li>
           <h3>HBO</h3>
           <p>I've worked on at least four different primetime television series for them throughout the past decade, doing graphic design and on-screen interactive. I'm also the unofficial typography consultant for growing percentage of their executives.</p>
         </li>
 
-        <li class="client">
+        <li>
           <h3>Dinner Lab</h3>
           <p>I was their first technical hire outside of the original partners. I built out a custom design system for their client facing interface and marketing pages. While the company no longer exists, in its heyday the company was active in over 30 cities across the country.</p>
         </li>
 
-        <li class="client">
+        <li>
           <h3>nclud</h3>
           <p>As a Front End Developer, I worked on projects for Tesla Motors, George Washington University, Wingate Hughes Architecture, and General Assembly, among many others. Collaborating with some amazing peers, I was also the catalyst behind their latest rebrand.</p>
         </li>
 
-        <li class="client">
+        <li>
           <h3>Agora</h3>
           <p>I was hired as a front end developer for their largest property, Stansberry &amp; Associates. I refactored a legacy (read: horrifying) codebase and built two new design systems, but my crowning achievement was a small improvement to an onboarding form that resulted in an additional ~$200,000 in revenue, practically overnight.</p>
         </li>
 
-        <li class="client">
+        <li>
           <h3>Schindler Group</h3>
           <p>I designed an updated version of their interactive elevator cab designer. Although there were heavy constraints and requirements, I was able to create something that got the job done gracefully. I have a deep appreciation for "boring" functional design, and this was a great opportunity to do precisely that.</p>
         </li>
 
-        <li class="client">
+        <li>
           <h3>Nick Noble Works</h3>
           <p>I know it's weird to put myself down as a client, but I'm very proud of the fact that I've built a sustainable and successful freelance practice. Since I'm applying for a job I think this is great artifact to look at: not only do I know how to do the work, but I have first hand understanding of the underlying business problems and constraints that come into play.</p>
         </li>
       </ul>
 
       <h4>Everyone I've ever worked with:</h4>
-      <ul class="client-list">
-        <li class="client">1912 Center</li>
-        <li class="client">Agora, Inc</li>
-        <li class="client">Backroom</li>
-        <li class="client">Blown Deadline (David Simon)</li>
-        <li class="client">Bombay Sapphire</li>
-        <li class="client">The Buller Group</li>
-        <li class="client">Cathedral Creative Studios</li>
-        <li class="client">CBS</li>
-        <li class="client">Christina Tonkin Interior Design</li>
-        <li class="client">Dallas Theological Seminary</li>
-        <li class="client">Dat Dog</li>
-        <li class="client">Dinner Lab</li>
-        <li class="client">DJ-Sun</li>
-        <li class="client">DJ CoolHand</li>
-        <li class="client">fedscoop</li>
-        <li class="client">FOX FX</li>
-        <li class="client">FOX Searchlight</li>
-        <li class="client">Friendship, LLC</li>
-        <li class="client">GNO Sports Foundation</li>
-        <li class="client">George Washington University</li>
-        <li class="client">HacksmithLabs</li>
-        <li class="client">HBO</li>
-        <li class="client">IMRE</li>
-        <li class="client">Interfolio</li>
-        <li class="client">Ionic Security</li>
-        <li class="client">Lanyap Creative</li>
-        <li class="client">Marquee</li>
-        <li class="client">nclud</li>
-        <li class="client">Netflix</li>
-        <li class="client">New Orleans Fashion Week</li>
-        <li class="client">NOLATech Week</li>
-        <li class="client">The Ogden Museum of Southern Art</li>
-        <li class="client">Paramount Pictures</li>
-        <li class="client">PDK International</li>
-        <li class="client">PowerBar</li>
-        <li class="client">Radiate Records</li>
-        <li class="client">RapJab</li>
-        <li class="client">STIHL</li>
-        <li class="client">Schindler Group</li>
-        <li class="client">Small Batch MGMT</li>
-        <li class="client">Startup Weekend</li>
-        <li class="client">Symantec</li>
-        <li class="client">Symbacort</li>
-        <li class="client">Tesla Motors</li>
-        <li class="client">Wingate Hughes</li>
-        <li class="client">YouthINC</li>
+      <ul class="comma-list">
+        <li>1912 Center</li>
+        <li>Agora, Inc</li>
+        <li>Backroom</li>
+        <li>Blown Deadline (David Simon)</li>
+        <li>Bombay Sapphire</li>
+        <li>The Buller Group</li>
+        <li>Cathedral Creative Studios</li>
+        <li>CBS</li>
+        <li>Christina Tonkin Interior Design</li>
+        <li>Dallas Theological Seminary</li>
+        <li>Dat Dog</li>
+        <li>Dinner Lab</li>
+        <li>DJ-Sun</li>
+        <li>DJ CoolHand</li>
+        <li>fedscoop</li>
+        <li>FOX FX</li>
+        <li>FOX Searchlight</li>
+        <li>Friendship, LLC</li>
+        <li>GNO Sports Foundation</li>
+        <li>George Washington University</li>
+        <li>HacksmithLabs</li>
+        <li>HBO</li>
+        <li>IMRE</li>
+        <li>Interfolio</li>
+        <li>Ionic Security</li>
+        <li>Lanyap Creative</li>
+        <li>Marquee</li>
+        <li>nclud</li>
+        <li>Netflix</li>
+        <li>New Orleans Fashion Week</li>
+        <li>NOLATech Week</li>
+        <li>The Ogden Museum of Southern Art</li>
+        <li>Paramount Pictures</li>
+        <li>PDK International</li>
+        <li>PowerBar</li>
+        <li>Radiate Records</li>
+        <li>RapJab</li>
+        <li>STIHL</li>
+        <li>Schindler Group</li>
+        <li>Small Batch MGMT</li>
+        <li>Startup Weekend</li>
+        <li>Symantec</li>
+        <li>Symbacort</li>
+        <li>Tesla Motors</li>
+        <li>Wingate Hughes</li>
+        <li>YouthINC</li>
       </ul>
     </section>
 
