--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <span class="b-highlight c-white">Hire<br>Me?</span>
       </a>
     </div>
-    
+
     <!-- 00 Intro -->
     <section class="section b-white c-black" id="intro">
 
@@ -90,7 +90,7 @@
       </header>
 
       <div class="block text">
-        <h2 class="title">Nick Noble focuses on designing and developing systems that are provably effective.</h2>
+        <h2 class="title">Nick Noble focuses on designing and developing effective systems.</h2>
         <p class="lead">While freelancing has been a successful venture for him, he'd rather create at Work&amp;Co. That way he'd have to the opportunity to solve ever larger puzzles with the best collaborators in the world. <strong>By the way—he isn't applying anywhere else.</strong></p>
       </div>
 
@@ -109,10 +109,10 @@
     <!-- 01 Expertise -->
     <section class="section b-highlight c-white" id="expertise">
       <header class="section-header b-highlight">
-        <h4><span class="number c-black">02</span> Expertise and Philosophy</h4>
+        <h4><span class="number c-white">01</span> Expertise and Philosophy</h4>
       </header>
 
-      <h1>All Of My Secrets</h1>
+      <h1>A Few Of My Secrets</h1>
 
       <ol class="letter-list">
         <li>
@@ -132,7 +132,7 @@
 
         <li>
           <h2>If you don't do your best, you'll live to regret it</h2>
-          <p>The double edged sword of software is that it never _has_ to be finished. I'd rather take the time and effort to make something incredible now — rather than taking the risk of never having the chance.</p>
+          <p>The double edged sword of software is that it never <em>has</em> to be finished. I'd rather take the time and effort to make something incredible now — rather than taking the risk of never having the chance.</p>
         </li>
       </ol>
     </section>
@@ -140,7 +140,7 @@
     <!-- 02 Clients -->
     <section class="section b-white c-black" id="clients">
       <header class="section-header b-white">
-        <h4><span class="number c-black">03</span> Client List</h4>
+        <h4><span class="number c-black">02</span> Client List</h4>
       </header>
 
       <h1>Public engagements</h1>
@@ -230,12 +230,12 @@
     </section>
 
     <!-- 03 Cases -->
-    <section class="section b-gray" id="cases">
+    <section class="section b-gray c-dark" id="cases">
       <header class="section-header b-gray">
-        <h4><span class="number c-black">04</span> Cases</h4>
+        <h4><span class="number c-dark">03</span> Cases</h4>
       </header>
 
-      <div class="text">
+      <div class="text c-black">
         <h1>Case studies</h1>
         <h3>These are a few projects I'm proud of, for one reason or another. Unfortunately in some cases I'm bound by a NDA, so I can only divulge approximate numbers.</h3>
       </div>
@@ -246,7 +246,7 @@
         <figure class="zz-item">
           <img src="https://www.fillmurray.com/1600/900" alt="">
           <figcaption>
-            <h2>This is a title</h2>
+            <h2 class="c-black">This is a title</h2>
             <p>This is a description</p>
           </figcaption>
         </figure>
@@ -254,7 +254,7 @@
         <figure class="zz-item">
           <img src="https://www.fillmurray.com/1600/900" alt="">
           <figcaption>
-            <h2>This is a title</h2>
+            <h2 class="c-black">This is a title</h2>
             <p>This is a description</p>
           </figcaption>
         </figure>
@@ -262,7 +262,7 @@
         <figure class="zz-item">
           <img src="https://www.fillmurray.com/1600/900" alt="">
           <figcaption>
-            <h2>This is a title</h2>
+            <h2 class="c-black">This is a title</h2>
             <p>This is a description</p>
           </figcaption>
         </figure>
@@ -270,31 +270,38 @@
         <figure class="zz-item">
           <img src="https://www.fillmurray.com/1600/900" alt="">
           <figcaption>
-            <h2>This is a title</h2>
+            <h2 class="c-black">This is a title</h2>
             <p>This is a description</p>
           </figcaption>
         </figure>
       </div>
+      <br>
     </section>
 
     <!-- 04 Candidate -->
     <section class="section b-white c-black" id="candidate">
       <header class="section-header b-white">
-        <h4><span class="number c-black">05</span> Candidate</h4>
+        <h4><span class="number c-black">04</span> Candidate</h4>
       </header>
+
+      <h1 class="t-center">Generalist, by design</h1>
+      <br><hr><br>
+
+      <p class="sans"><strong>Nick Noble<br><span class="c-gray">Wherever you'll put me</span></strong></p>
+      <p>Focus: Solving the world, one detail at a time. Led a successful individual practice for over three years, taught multiple people how to code from scratch, and broke into This Also's website by accident. Now does amazing things at Work&amp;Co (fingers crossed!) Past Life: Special FX make up artist then graphic artist for television aired by HBO, CBS, Fox FX, and Netflix.</p>
     </section>
 
     <!-- 05 Facts -->
     <section class="section b-highlight" id="facts">
       <header class="section-header b-highlight">
-        <h4><span class="number c-black">06</span> Facts</h4>
+        <h4><span class="number c-white">05</span> Facts</h4>
       </header>
     </section>
 
     <!-- 06 Contact -->
     <section class="section b-black c-white" id="contact">
       <header class="section-header b-black">
-        <h4 class="c-white"><span class="number c-white">07</span> Contact</h4>
+        <h4 class="c-white"><span class="number c-white">06</span> Contact</h4>
       </header>
     </section>
   </main>
