apply new classes

--- a/index.html
+++ b/index.html
@@ -284,10 +284,11 @@
         <h4><span class="number c-black">04</span> Candidate</h4>
       </header>
 
-      <h1 class="t-center">Generalist, by design</h1>
-      <br><hr><br>
+      <div class="block">
+        <h1 class="t-center">Generalist, by design</h1>
+      </div>
 
-      <p class="sans"><strong>Nick Noble<br><span class="c-gray">Wherever you'll put me</span></strong></p>
+      <h5>Nick Noble<br><span class="c-gray">Wherever you'll put me</span></h5>
       <p>Focus: Solving the world, one detail at a time. Led a successful individual practice for over three years, taught multiple people how to code from scratch, and broke into This Also's website by accident. Now does amazing things at Work&amp;Co (fingers crossed!) Past Life: Special FX make up artist then graphic artist for television aired by HBO, CBS, Fox FX, and Netflix.</p>
     </section>
 
