add cta link to intro

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Nick Noble at Work&amp;Co?</title>
+  <title>Nick Noble at Work &amp; Co?</title>
 
   <link type="text/plain" rel="author" href="humans.txt" />
   <link type="text/css" rel="stylesheet" href="styles.css" />
@@ -90,8 +90,10 @@
       </header>
 
       <div class="block text">
-        <h2 class="title">Nick Noble focuses on designing and developing effective systems.</h2>
-        <p class="lead">While freelancing has been a successful venture for him, he'd rather create at Work&amp;Co. That way he'd have to the opportunity to solve ever larger puzzles with the best collaborators in the world. <strong>By the way—he isn't applying anywhere else.</strong></p>
+        <h2 class="title">Nick Noble focuses on designing and developing great results.</h2>
+        <p class="lead">While freelancing has been a successful venture for him, he'd rather create at Work &amp; Co. That way he'd have to the opportunity to solve ever larger puzzles with the best collaborators in the world. <strong>By the way—he isn't applying anywhere else.</strong></p>
+
+        <a class="cta" href="mailto:frontdesk@nicknoble.works?subject=Let's%20talk.&body=Hey%20Nick%2C%0A%0A%20%20%20%20We%20saw%20the%20site%20you%20made%20and%20thought%20it%20was%20pretty%20%7B%7B%20adjective%20%7D%7D.%20%0A%0AWould%20you%20be%20available%20on%20either%20%7B%7B%20convenient%20date%20and%20time%20%7D%7D%20or%20%7B%7B%20alternate%20date%20and%20time%20%7D%7D%20to%20meet%20us%20%7B%7B%20at%20our%20offices%20in%20DUMBO%20%2F%2F%20for%20coffee%20%7D%7D%3F%0A%0ALooking%20forward%20to%20speaking%20further%2C%0A%0A%7B%7B%20Your%20Name%20Here%20%7D%7D%0A%0APS%3A%20I%20hope%20you%20like%20mad-libs.">Set up an interview &rarr;</a>
       </div>
 
       <h4>Content</h4>
@@ -289,7 +291,7 @@
       </div>
 
       <h5>Nick Noble<br><span class="c-gray">Wherever you'll put me</span></h5>
-      <p>Focus: Solving the world, one detail at a time. Led a successful individual practice for over three years, taught multiple people how to code from scratch, and broke into This Also's website by accident. Now does amazing things at Work&amp;Co (fingers crossed!) Past Life: Special FX make up artist then graphic artist for television aired by HBO, CBS, Fox FX, and Netflix.</p>
+      <p>Focus: Solving for the world, one detail at a time. Led a successful individual practice for over three years, taught 4+ people how to code from scratch, and broke into This Also's website by accident. Now does amazing things at Work &amp; Co (fingers crossed!) Past Life: Special FX make up artist then graphic artist for television aired by HBO, CBS, Fox FX, and Netflix.</p>
     </section>
 
     <!-- 05 Facts -->
