add contact content

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 
       <div class="text c-black">
         <h1>Case studies</h1>
-        <h3>These are a few projects I'm proud of, for one reason or another. Unfortunately in some cases I'm bound by a NDA, so I can only divulge approximate numbers.</h3>
+        <h3>While these might not be the most visible projects, they are ones I'm proud of for one reason or another.</h3>
       </div>
 
       <h4>Selected projects</h4>
@@ -291,7 +291,7 @@
       </div>
 
       <h5>Nick Noble<br><span class="c-gray">Wherever you'll put me</span></h5>
-      <p>Focus: Solving for the world, one detail at a time. Led a successful individual practice for over three years, taught 4+ people how to code from scratch, and broke into This Also's website by accident. Now does amazing things at Work &amp; Co (fingers crossed!) Past Life: Special FX make up artist then graphic artist for television aired by HBO, CBS, Fox FX, and Netflix.</p>
+      <p>Focus: Solving for the world, one detail at a time. Led a successful individual practice for over three years, excels at combining the best of design &amp; development, and once broke into This Also's website by accident. Now does amazing things at Work &amp; Co (fingers crossed!) Past Life: Special FX make up artist then graphic artist for television aired by HBO, CBS, Fox FX, and Netflix.</p>
     </section>
 
     <!-- 05 Facts -->
@@ -306,6 +306,23 @@
       <header class="section-header b-black">
         <h4 class="c-white"><span class="number c-white">06</span> Contact</h4>
       </header>
+      
+      <div class="block text">
+        <h2>Hopefully, imitation actually is <br>the greatest form of flattery.</h2>
+
+        <p>Let's talk more about where someone like me could fit in at Work &amp; Co. I live near Prospect Park, relatively close to your DUMBO offices—so if you're interested in continuing the conversation, I'd be more than happy to come to you.</p>
+
+        <a href="mailto:frontdesk@nicknoble.works?subject=Let's%20talk.&body=Hey%20Nick%2C%0A%0A%20%20%20%20We%20saw%20the%20site%20you%20made%20and%20thought%20it%20was%20pretty%20%7B%7B%20adjective%20%7D%7D.%20%0A%0AWould%20you%20be%20available%20on%20either%20%7B%7B%20convenient%20date%20and%20time%20%7D%7D%20or%20%7B%7B%20alternate%20date%20and%20time%20%7D%7D%20to%20meet%20us%20%7B%7B%20at%20our%20offices%20in%20DUMBO%20%2F%2F%20for%20coffee%20%7D%7D%3F%0A%0ALooking%20forward%20to%20speaking%20further%2C%0A%0A%7B%7B%20Your%20Name%20Here%20%7D%7D%0A%0APS%3A%20I%20hope%20you%20like%20mad-libs." class="cta c-white">Let's do it!</a>
+      </div>
+
+      <dl>
+        <dt>Email</dt>
+        <dd><a href="mailto:frontdesk@nicknoble.works">frontdesk@nicknoble.works</a></dd>
+        <dt>Telephone</dt>
+        <dd><a href="tel:4106089787">(410)-608-9787</a></dd>
+        <dt>Twitter</dt>
+        <dd><a target="_blank" rel="noopener noreferrer" href="//twitter.com/nickisnoble">@nickisnoble</a></dd>
+      </dl>
     </section>
   </main>
 
