minor copy changes

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <ol class="letter-list">
         <li>
           <h2>I only wear as many hats as possible</h2>
-          <p>Doing one thing all the time is boring. Every part of the process one learns helps the rest that much more. Design, code, content, research, testing, and constant iteration. To everyone else, these seem to be separate concepts, but to me it's all part of building a successful system that delivers value, to the right people, at the right time, in the right way.</p>
+          <p>Doing one thing all the time is boring. Every part of the process you learns brings greater understanding to the rest. Design, code, content, research, testing, and constant iteration. To everyone else, these seem to be separate concepts. To me, it's all part of building a successful product. Delivering value to the right people, at the right time, in the right way.</p>
         </li>
 
         <li>
@@ -129,7 +129,7 @@
 
         <li>
           <h2>Precedent matters</h2>
-          <p>After a few millennia of commerce, hundreds of years of marketing, and 70 years of computing, humans have learned a thing or two about processing value. Even if you're dealing with something brand new, it's possible the solution to the problem at hand exists in the past. It just needs to be translated. Then again, there's no use putting wheels on a hovercraft, just because you have them laying around.</p>
+          <p>After a few millennia of commerce, hundreds of years of marketing, and 70 years of computing, humans have learned a thing or two about processing value. Even if you're dealing with something brand new, it's possible the solution to the problem exists in the past. It just needs to be translated. Then again, there's no use putting wheels on a hovercraft, just because you have them laying around.</p>
         </li>
 
         <li>
@@ -219,12 +219,14 @@
         <li>PowerBar</li>
         <li>Radiate Records</li>
         <li>RapJab</li>
+        <li>Rendia</li>
         <li>STIHL</li>
         <li>Schindler Group</li>
         <li>Small Batch MGMT</li>
         <li>Startup Weekend</li>
         <li>Symantec</li>
         <li>Symbacort</li>
+        <li>The Telos Group</li>
         <li>Tesla Motors</li>
         <li>Wingate Hughes</li>
         <li>YouthINC</li>
@@ -248,7 +250,7 @@
         <figure class="zz-item">
           <img src="https://www.fillmurray.com/1600/900" alt="">
           <figcaption>
-            <h2 class="c-black">This is a title</h2>
+            <h2 class="c-black">PDK Poll</h2>
             <p>This is a description</p>
           </figcaption>
         </figure>
@@ -256,7 +258,7 @@
         <figure class="zz-item">
           <img src="https://www.fillmurray.com/1600/900" alt="">
           <figcaption>
-            <h2 class="c-black">This is a title</h2>
+            <h2 class="c-black">DJ Coolhand</h2>
             <p>This is a description</p>
           </figcaption>
         </figure>
@@ -264,20 +266,15 @@
         <figure class="zz-item">
           <img src="https://www.fillmurray.com/1600/900" alt="">
           <figcaption>
-            <h2 class="c-black">This is a title</h2>
-            <p>This is a description</p>
-          </figcaption>
-        </figure>
-
-        <figure class="zz-item">
-          <img src="https://www.fillmurray.com/1600/900" alt="">
-          <figcaption>
-            <h2 class="c-black">This is a title</h2>
+            <h2 class="c-black">Lnky</h2>
             <p>This is a description</p>
           </figcaption>
         </figure>
       </div>
       <br>
+      <hr>
+      <br>
+      <h4>Logos</h4>
     </section>
 
     <!-- 04 Candidate -->
