add and style case images

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         <li>Friendship, LLC</li>
         <li>GNO Sports Foundation</li>
         <li>George Washington University</li>
-        <li>HacksmithLabs</li>
+        <li>Hacksmith Labs</li>
         <li>HBO</li>
         <li>IMRE</li>
         <li>Interfolio</li>
@@ -241,14 +241,16 @@
 
       <div class="text c-black">
         <h1>Case studies</h1>
-        <h3>While these might not be the most visible projects, they are ones I'm proud of for one reason or another.</h3>
+        <h3>While these might not be the most visible projects, they are ones I'm proud of—for one reason or another.</h3>
       </div>
 
       <h4>Selected projects</h4>
 
       <div class="zigzag">
         <figure class="zz-item">
-          <img src="https://www.fillmurray.com/1600/900" alt="">
+          <a href="http://pdkpoll.org/">
+            <img src="/images/poll_1.png">
+          </a>
           <figcaption>
             <h2 class="c-black">PDK Poll</h2>
             <p>This is a description</p>
@@ -256,7 +258,9 @@
         </figure>
 
         <figure class="zz-item">
-          <img src="https://www.fillmurray.com/1600/900" alt="">
+          <a href="https://www.djcoolhand.com/">
+            <img src="/images/coolhand_1.png">
+          </a>
           <figcaption>
             <h2 class="c-black">DJ Coolhand</h2>
             <p>This is a description</p>
@@ -264,7 +268,9 @@
         </figure>
 
         <figure class="zz-item">
-          <img src="https://www.fillmurray.com/1600/900" alt="">
+          <a href="https://lnky.io/">
+            <img src="/images/lnky_1.png">
+          </a>
           <figcaption>
             <h2 class="c-black">Lnky</h2>
             <p>This is a description</p>
